--- a/README.html
+++ b/README.html
@@ -90,7 +90,34 @@ shadows, reflections, etc.).</p>
 <figcaption>Running <code>./raytracing</code> should produce this image.</figcaption>
 </figure>
 
-<h2 id="dynamicrangeburning">Dynamic Range &amp; Burning</h2>
+<h2 id="floatingpointnumbers">Floating point numbers</h2>
+
+<p>For this assignment we will use the <code>Eigen::Vector3d</code> to represent points and
+vectors, but <em>also</em> RGB colors. For all computation (before finally writing the
+.ppm file) we will use double precision floating point numbers and <code>0</code> will
+represent no light and <code>1</code> will represent the brightest color we can display.</p>
+
+<p><a href="https://en.wikipedia.org/wiki/Floating-point_arithmetic">Floating point
+numbers</a> <span class="math">\(≠\)</span> <a href="https://en.wikipedia.org/wiki/Real_number">real
+numbers</a>, they don&#8217;t even cover all
+of the <a href="https://en.wikipedia.org/wiki/Rational_number">rational numbers</a>. This
+creates a number of challenges in numerical method and rendering is not immune
+to them. We see this in the need for a <a href="https://en.wikipedia.org/wiki/Fudge_factor">fudge
+factor</a> to discard ray-intersections
+when computing shadows or reflections that are too close to the originating
+surface (i.e., false intersections due to numerical error).</p>
+
+<blockquote>
+<p><strong>Question:</strong> If we build a ray and a plane with floating point coefficients,
+will the intersection point have floating point coefficients? What if we
+consider rational coefficients? What if we consider a sphere instead of a
+plane?</p>
+
+<p><strong>Hint:</strong> Can we <em>exactly</em> represent <span class="math">\(1/3\)</span> as a <code>double</code>? Can we represent
+<span class="math">\(\sqrt{2}\)</span> as a rational?</p>
+</blockquote>
+
+<h3 id="dynamicrangeburning">Dynamic Range &amp; Burning</h3>
 
 <p>Light obeys the <a href="https://en.wikipedia.org/wiki/Superposition_principle">superposition
 principle</a>. Simply put,
