--- a/README.html
+++ b/README.html
@@ -71,7 +71,7 @@ $\renewcommand{\v}{\vec{v}}$
 
 <h2 id="background">Background</h2>
 
-<h3 id="readsections4.5-4.9offundamentalsofcomptuergraphics4thedition.">Read Sections 4.5&#8211;4.9 of <em>Fundamentals of Comptuer Graphics (4th Edition)</em>.</h3>
+<h3 id="readsections4.5-4.9offundamentalsofcomptuergraphics4thedition.">Read Sections 4.5&#8211;4.9 of <em>Fundamentals of Computer Graphics (4th Edition)</em>.</h3>
 
 <p>Many of the classes and functions of this assignment are borrowed or adapted
 from the previous <a href="https://github.com/alecjacobson/computer-graphics-ray-casting">ray casting assignment</a>.</p>
