readme about hw2 lib

--- a/README.html
+++ b/README.html
@@ -11,67 +11,67 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <body>
 
 <div style="display:none">
-$\newcommand{\A}{\mat{A}}$
-$\newcommand{\B}{\mat{B}}$
-$\newcommand{\C}{\mat{C}}$
-$\newcommand{\D}{\mat{D}}$
-$\newcommand{\E}{\mat{E}}$
-$\newcommand{\F}{\mat{F}}$
-$\newcommand{\G}{\mat{G}}$
-$\newcommand{\H}{\mat{H}}$
-$\newcommand{\I}{\mat{I}}$
-$\newcommand{\K}{\mat{K}}$
-$\newcommand{\L}{\mat{L}}$
-$\newcommand{\M}{\mat{M}}$
-$\newcommand{\N}{\mat{N}}$
-$\newcommand{\One}{\mathbf{1}}$
-$\newcommand{\P}{\mat{P}}$
-$\newcommand{\Q}{\mat{Q}}$
-$\newcommand{\Rot}{\mat{R}}$
-$\newcommand{\R}{\mathbb{R}}$
-$\newcommand{\S}{\mathcal{S}}$
-$\newcommand{\T}{\mat{T}}$
-$\newcommand{\U}{\mat{U}}$
-$\newcommand{\V}{\mat{V}}$
-$\newcommand{\W}{\mat{W}}$ 
-$\newcommand{\X}{\mat{X}}$
-$\newcommand{\Y}{\mat{Y}}$
-$\newcommand{\argmax}{\mathop{\text{argmax}}}$
-$\newcommand{\argmin}{\mathop{\text{argmin}}}$
-$\newcommand{\c}{\vec{c}}$
-$\newcommand{\d}{\vec{d}}$
-$\newcommand{\e}{\vec{e}}$
-$\newcommand{\f}{\vec{f}}$
-$\newcommand{\g}{\vec{g}}$
-$\newcommand{\mat}[1]{\mathbf{#1}}$
-$\newcommand{\min}{\mathop{\text{min}}}$
-$\newcommand{\n}{\vec{n}}$
-$\newcommand{\p}{\vec{p}}$
-$\newcommand{\q}{\vec{q}}$
-$\newcommand{\r}{\vec{r}}$
-$\newcommand{\transpose}{{\mathsf T}}$
-$\newcommand{\tr}[1]{\mathop{\text{tr}}{\left(#1\right)}}$
-$\newcommand{\t}{\vec{t}}$
-$\newcommand{\u}{\vec{u}}$
-$\newcommand{\vec}[1]{\mathbf{#1}}$
-$\newcommand{\x}{\vec{x}}$
-$\newcommand{\y}{\vec{y}}$
-$\newcommand{\z}{\vec{z}}$
-$\renewcommand{\v}{\vec{v}}$
+<span class="math">\(\newcommand{\A}{\mat{A}}\)</span>
+<span class="math">\(\newcommand{\B}{\mat{B}}\)</span>
+<span class="math">\(\newcommand{\C}{\mat{C}}\)</span>
+<span class="math">\(\newcommand{\D}{\mat{D}}\)</span>
+<span class="math">\(\newcommand{\E}{\mat{E}}\)</span>
+<span class="math">\(\newcommand{\F}{\mat{F}}\)</span>
+<span class="math">\(\newcommand{\G}{\mat{G}}\)</span>
+<span class="math">\(\newcommand{\H}{\mat{H}}\)</span>
+<span class="math">\(\newcommand{\I}{\mat{I}}\)</span>
+<span class="math">\(\newcommand{\K}{\mat{K}}\)</span>
+<span class="math">\(\newcommand{\L}{\mat{L}}\)</span>
+<span class="math">\(\newcommand{\M}{\mat{M}}\)</span>
+<span class="math">\(\newcommand{\N}{\mat{N}}\)</span>
+<span class="math">\(\newcommand{\One}{\mathbf{1}}\)</span>
+<span class="math">\(\newcommand{\P}{\mat{P}}\)</span>
+<span class="math">\(\newcommand{\Q}{\mat{Q}}\)</span>
+<span class="math">\(\newcommand{\Rot}{\mat{R}}\)</span>
+<span class="math">\(\newcommand{\R}{\mathbb{R}}\)</span>
+<span class="math">\(\newcommand{\S}{\mathcal{S}}\)</span>
+<span class="math">\(\newcommand{\T}{\mat{T}}\)</span>
+<span class="math">\(\newcommand{\U}{\mat{U}}\)</span>
+<span class="math">\(\newcommand{\V}{\mat{V}}\)</span>
+<span class="math">\(\newcommand{\W}{\mat{W}}\)</span>
+<span class="math">\(\newcommand{\X}{\mat{X}}\)</span>
+<span class="math">\(\newcommand{\Y}{\mat{Y}}\)</span>
+<span class="math">\(\newcommand{\argmax}{\mathop{\text{argmax}}}\)</span>
+<span class="math">\(\newcommand{\argmin}{\mathop{\text{argmin}}}\)</span>
+<span class="math">\(\newcommand{\c}{\vec{c}}\)</span>
+<span class="math">\(\newcommand{\d}{\vec{d}}\)</span>
+<span class="math">\(\newcommand{\e}{\vec{e}}\)</span>
+<span class="math">\(\newcommand{\f}{\vec{f}}\)</span>
+<span class="math">\(\newcommand{\g}{\vec{g}}\)</span>
+<span class="math">\(\newcommand{\mat}[1]{\mathbf{#1}}\)</span>
+<span class="math">\(\newcommand{\min}{\mathop{\text{min}}}\)</span>
+<span class="math">\(\newcommand{\n}{\vec{n}}\)</span>
+<span class="math">\(\newcommand{\p}{\vec{p}}\)</span>
+<span class="math">\(\newcommand{\q}{\vec{q}}\)</span>
+<span class="math">\(\newcommand{\r}{\vec{r}}\)</span>
+<span class="math">\(\newcommand{\transpose}{{\mathsf T}}\)</span>
+<span class="math">\(\newcommand{\tr}[1]{\mathop{\text{tr}}{\left(#1\right)}}\)</span>
+<span class="math">\(\newcommand{\t}{\vec{t}}\)</span>
+<span class="math">\(\newcommand{\u}{\vec{u}}\)</span>
+<span class="math">\(\newcommand{\vec}[1]{\mathbf{#1}}\)</span>
+<span class="math">\(\newcommand{\x}{\vec{x}}\)</span>
+<span class="math">\(\newcommand{\y}{\vec{y}}\)</span>
+<span class="math">\(\newcommand{\z}{\vec{z}}\)</span>
+<span class="math">\(\renewcommand{\v}{\vec{v}}\)</span>
 </div>
 
 <h1 id="computergraphics–raytracing">Computer Graphics – Ray Tracing</h1>
 
 <blockquote>
-<p><strong>To get started:</strong> Fork this repository then issue</p>
+<p><strong>To get started:</strong> Clone this repository using</p>
 
-<pre><code>git clone --recursive http://github.com/[username]/computer-graphics-ray-tracing.git
+<pre><code>git clone --recursive http://github.com/alecjacobson/computer-graphics-ray-tracing.git
 </code></pre>
 </blockquote>
 
 <h2 id="background">Background</h2>
 
-<h3 id="readsections4.5-4.9offundamentalsofcomptuergraphics4thedition.">Read Sections 4.5&#8211;4.9 of <em>Fundamentals of Computer Graphics (4th Edition)</em>.</h3>
+<h3 id="readsections4.5-4.9offundamentalsofcomputergraphics4thedition.">Read Sections 4.5&#8211;4.9 of <em>Fundamentals of Computer Graphics (4th Edition)</em>.</h3>
 
 <p>Many of the classes and functions of this assignment are borrowed or adapted
 from the previous <a href="https://github.com/alecjacobson/computer-graphics-ray-casting">ray casting assignment</a>.</p>
@@ -182,15 +182,14 @@ Eigen::Vector3d c = (a.array() * b.array()).matrix();
 length): <code>a.normalized()</code>.</p>
 
 <p>C++ standard library includes a value for <span class="math">\(∞\)</span> via <code>#include &lt;limits&gt;</code>. For
-example, for <code>double</code> floating point, use <code>std::numeric_limits&lt;infinity&gt;</code>.</p>
+example, for <code>double</code> floating point, use <code>std::numeric_limits&lt;double&gt;::infinity()</code>.</p>
 
 <h2 id="tasks">Tasks</h2>
 
 <h3 id="srcplane.cppbrsrcsphere.cppbrsrctriangle.cppbrsrctrianglesoup.cppbrsrcfirst_hit.cppbrsrcviewing_ray.cppbrsrcwrite_ppm.cpp"><code>src/Plane.cpp</code>,<br> <code>src/Sphere.cpp</code>,<br> <code>src/Triangle.cpp</code>,<br> <code>src/TriangleSoup.cpp</code>,<br> <code>src/first_hit.cpp</code>,<br> <code>src/viewing_ray.cpp</code>,<br> <code>src/write_ppm.cpp</code></h3>
 
 <p>See the previous <a href="https://github.com/alecjacobson/computer-graphics-ray-casting">ray casting
-assignment</a> or
-email jacobson@cs.toronto.edu.</p>
+assignment</a>.</p>
 
 <h3 id="pointlight::directioninsrcpointlight.cpp"><code>PointLight::direction</code> in <code>src/PointLight.cpp</code></h3>
 
@@ -251,6 +250,33 @@ parameters.</p>
 
 <p>The <a href="https://en.wikipedia.org/wiki/JSON">.json format</a> is rather
 straightforward. But you may find this <a href="https://jsonlint.com">validator</a> useful.</p>
+
+<blockquote>
+<h3 id="hw2solution">HW2 Solution</h3>
+
+<p>If you don&#8217;t trust your solutiosn to the files from HW2:</p>
+
+<pre><code>src/Plane.cpp
+src/Sphere.cpp
+src/Triangle.cpp
+src/TriangleSoup.cpp
+src/first_hit.cpp
+src/viewing_ray.cpp
+src/write_ppm.cpp
+</code></pre>
+
+<p>You can use precompiled binaries (provided for mac and linux for now) using a
+the cmake command:</p>
+
+<pre><code>mkdir build
+cd build
+cmake -DCMAKE_BUILD_TYPE=Debug -DHW2LIB_DIR=../lib/debug/linux/ ..
+make
+</code></pre>
+
+<p>This will use the library at <code>../lib/debug/linux/libhw2.a</code> instead of
+compiling the above files in <code>src/</code>.</p>
+</blockquote>
 
 </body>
 </html>
