--- a/README.html
+++ b/README.html
@@ -2,14 +2,32 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<link type="text/css" rel="stylesheet" href="shared/css/style.css"/>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
-</script>
-<script type="text/javascript" src="shared/js/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	<link type="text/css" rel="stylesheet" href="css/github-markdown.css"/>
+<link rel="stylesheet" href="css/github-markdown.css">
+<style>
+.markdown-body {
+box-sizing: border-box;
+min-width: 200px;
+max-width: 980px;
+margin: 0 auto;
+padding: 45px;
+}
 </head>
 <body>
 
+<pre><code>@media (max-width: 767px) {
+    .markdown-body {
+        padding: 15px;
+    }
+}
+</code></pre>
+
+<p></style>
+<article class="markdown-body"></p>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
+</script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <div style="display:none">
 <span class="math">\(\newcommand{\A}{\mat{A}}\)</span>
 <span class="math">\(\newcommand{\B}{\mat{B}}\)</span>
@@ -20,6 +38,7 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <span class="math">\(\newcommand{\G}{\mat{G}}\)</span>
 <span class="math">\(\newcommand{\H}{\mat{H}}\)</span>
 <span class="math">\(\newcommand{\I}{\mat{I}}\)</span>
+<span class="math">\(\newcommand{\J}{\mat{J}}\)</span>
 <span class="math">\(\newcommand{\K}{\mat{K}}\)</span>
 <span class="math">\(\newcommand{\L}{\mat{L}}\)</span>
 <span class="math">\(\newcommand{\M}{\mat{M}}\)</span>
@@ -38,6 +57,8 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <span class="math">\(\newcommand{\Y}{\mat{Y}}\)</span>
 <span class="math">\(\newcommand{\argmax}{\mathop{\text{argmax}}}\)</span>
 <span class="math">\(\newcommand{\argmin}{\mathop{\text{argmin}}}\)</span>
+<span class="math">\(\newcommand{\a}{\vec{a}}\)</span>
+<span class="math">\(\newcommand{\b}{\vec{b}}\)</span>
 <span class="math">\(\newcommand{\c}{\vec{c}}\)</span>
 <span class="math">\(\newcommand{\d}{\vec{d}}\)</span>
 <span class="math">\(\newcommand{\e}{\vec{e}}\)</span>
@@ -45,6 +66,7 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <span class="math">\(\newcommand{\g}{\vec{g}}\)</span>
 <span class="math">\(\newcommand{\mat}[1]{\mathbf{#1}}\)</span>
 <span class="math">\(\newcommand{\min}{\mathop{\text{min}}}\)</span>
+<span class="math">\(\newcommand{\m}{\vec{m}}\)</span>
 <span class="math">\(\newcommand{\n}{\vec{n}}\)</span>
 <span class="math">\(\newcommand{\p}{\vec{p}}\)</span>
 <span class="math">\(\newcommand{\q}{\vec{q}}\)</span>
@@ -58,7 +80,10 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <span class="math">\(\newcommand{\x}{\vec{x}}\)</span>
 <span class="math">\(\newcommand{\y}{\vec{y}}\)</span>
 <span class="math">\(\newcommand{\z}{\vec{z}}\)</span>
+<span class="math">\(\newcommand{\0}{\vec{0}}\)</span>
 <span class="math">\(\renewcommand{\v}{\vec{v}}\)</span>
+<!-- https://github.com/mathjax/MathJax/issues/1766 -->
+<span class="math">\(\renewcommand{\hat}[1]{\widehat{#1}}\)</span>
 </div>
 
 <h1 id="computergraphics–raytracing">Computer Graphics – Ray Tracing</h1>
@@ -66,7 +91,7 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <blockquote>
 <p><strong>To get started:</strong> Clone this repository using</p>
 
-<pre><code>git clone --recursive http://github.com/alecjacobson/computer-graphics-ray-tracing.git
+<pre><code>git clone http://github.com/alecjacobson/computer-graphics-ray-tracing.git
 </code></pre>
 </blockquote>
 
@@ -140,11 +165,11 @@ correctly <a href="https://en.wikipedia.org/wiki/Energy_conservation">conserve e
 as happens with light in the physical world.</p>
 
 <figure>
-<img src="images/bunny.png" alt="Running ./raytracing ../shared/data/bunny.json should produce this image.
+<img src="images/bunny.png" alt="Running ./raytracing ../data/bunny.json should produce this image.
 Notice the burned out white
 regions where the collected light has been clamped to [1,1,1]
 (white)." />
-<figcaption>Running <code>./raytracing ../shared/data/bunny.json</code> should produce this image.
+<figcaption>Running <code>./raytracing ../data/bunny.json</code> should produce this image.
 Notice the <a href="https://en.wikipedia.org/wiki/Burned_(image)">&#8220;burned out&#8221;</a> white
 regions where the collected light has been clamped to [1,1,1]
 (white).</figcaption>
@@ -234,10 +259,10 @@ mirror reflections.</figcaption>
 &#8220;outgoing&#8221; vector.</p>
 
 <figure>
-<img src="images/sphere-packing.png" alt="./raytracing ../shared/data/sphere-packing.json should produce this
+<img src="images/sphere-packing.png" alt="./raytracing ../data/sphere-packing.json should produce this
 image of highly reflective, metallic looking
 surfaces." />
-<figcaption><code>./raytracing ../shared/data/sphere-packing.json</code> should produce this
+<figcaption><code>./raytracing ../data/sphere-packing.json</code> should produce this
 image of highly reflective, metallic looking
 surfaces.</figcaption>
 </figure>
