--- a/README.html
+++ b/README.html
@@ -89,10 +89,12 @@ padding: 45px;
 <h1 id="computergraphics–raytracing">Computer Graphics – Ray Tracing</h1>
 
 <blockquote>
-<p><strong>To get started:</strong> Clone this repository using</p>
+<p><strong>To get started:</strong> Clone this repository and its submodule using</p>
 
-<pre><code>git clone http://github.com/alecjacobson/computer-graphics-ray-tracing.git
+<pre><code>git clone --recursive http://github.com/alecjacobson/computer-graphics-ray-tracing.git
 </code></pre>
+
+<p><strong>Do not fork:</strong> Clicking &#8220;Fork&#8221; will create a <em>public</em> repository. If you&#8217;d like to use GitHub while you work on your assignment, then mirror this repo as a new <em>private</em> repository: https://stackoverflow.com/questions/10065526/github-how-to-make-a-fork-of-public-repository-private</p>
 </blockquote>
 
 <h2 id="background">Background</h2>
@@ -280,7 +282,7 @@ straightforward. But you may find this <a href="https://jsonlint.com">validator<
 <blockquote>
 <h3 id="hw2solution">HW2 Solution</h3>
 
-<p>If you don&#8217;t trust your solutiosn to the files from HW2:</p>
+<p>If you don&#8217;t trust your solutions to the files from HW2:</p>
 
 <pre><code>src/Plane.cpp
 src/Sphere.cpp
